# YOLO_PPF_Pose_Estimation

./: CMakeLists.txt  LICENSE  README.md
data/: 1_depth.exr  apple_merge_so.ply  apple_merge_so_mls8.ply  apple_merge_so_single.ply  apple_merge_so_single_mls.ply  apple_remesh_mm.ply  apple_sub1.5n_sor0.7.ply  bottle_remesh_meter_normalized.ply  can_taken.ply1.ply  coke_can.ply  cropped_cloud.ply  cylinder.ply  final_sub1.5n_sor1.2.ply  rs10st_or_multi1.5_knnk8.ply  rs11st_or_multi1.5_knnk8.ply
data/apple/: rs1st_or_multi1.5_knnk8.ply  rs2st_or_multi1.5_knnk8.ply  rs3st_or_multi1.5_knnk8.ply  rs4st_or_multi1.5_knnk8.ply  rs5st_or_multi1.5_knnk8.ply  rs6st_or_multi1.5_knnk8.ply  rs7st_or_multi1.5_knnk8.ply  rs8st_or_multi1.5_knnk8.ply  rs9st_or_multi1.5_knnk8.ply
data/apple_2_cropped/: 001.ply  002.ply  003.ply
data/apple_2_pre/: 001_knnk8.ply  002_knnk8.ply  003_knnk8.ply  004_knnk8.ply  005_knnk8.ply  006_knnk8.ply  007_knnk8.ply  008_knnk8.ply  009_knnk8.ply
data/apple_2_trans/: rs1st_or_multi1.5_knnk8.ply  trans_002.ply  trans_003.ply  trans_004.ply  trans_005.ply  trans_006.ply  trans_007.ply  trans_008.ply  trans_009.ply
data/apple_cropped/: 001.ply  002.ply  003.ply  004.ply  005.ply  006.ply  007.ply  008.ply  009.ply  010.ply  rs10st_or_multi1.5_knnk8.ply
data/apple_cropped_preprocessed/: rs1st_or_multi1.5_knnk8.ply  rs2st_or_multi1.5_knnk8.ply  rs3st_or_multi1.5_knnk8.ply  rs4st_or_multi1.5_knnk8.ply  rs5st_or_multi1.5_knnk8.ply  rs6st_or_multi1.5_knnk8.ply  rs7st_or_multi1.5_knnk8.ply  rs8st_or_multi1.5_knnk8.ply  rs9st_or_multi1.5_knnk8.ply
data/apple_cropped_trans/: trans_002.ply  trans_003.ply  trans_004.ply  trans_007.ply  trans_008.ply
data/apple_pcl_so/: rs2st_or_multi1.5_knnk8.ply  rs3st_or_multi1.5_knnk8.ply  rs4st_or_multi1.5_knnk8.ply  rs5st_or_multi1.5_knnk8.ply  rs6st_or_multi1.5_knnk8.ply  rs7st_or_multi1.5_knnk8.ply  rs8st_or_multi1.5_knnk8.ply  rs9st_or_multi1.5_knnk8.ply
data/apple_preprocessed/: rs1st_or_multi1.5_knnk8.ply  rs2st_or_multi1.5_knnk8.ply  rs4st_or_multi1.5_knnk8.ply  rs7st_or_multi1.5_knnk8.ply  rs8st_or_multi1.5_knnk8.ply
data/apple_trans/: trans_002.ply  trans_003.ply  trans_004.ply  trans_005.ply  trans_006.ply  trans_007.ply  trans_008.ply  trans_009.ply
data/bluemoon_1/: model_test_1.ply  model_test_2.ply  or1.2_mls15.ply  or1.2_mls15_meter.ply  or1.2_mls15_remesh.ply  or1.2_mls15_remesh_3.0.ply  or1.2_mls15_remesh_3.0_meter.ply  or1.2_mls15_remesh_meter.ply
data/bluemoon_1/cropped/: 001.ply  002.ply  003.ply  004.ply  005.ply  006.ply  007.ply  008.ply  009.ply
data/bluemoon_1/trans/: trans_002.ply  trans_003.ply  trans_004.ply  trans_005.ply  trans_006.ply  trans_007.ply  trans_008.ply  trans_009.ply
data/daily/: 4_cropped.ply
data/fake_apple/: sac_1.ply  sac_2.ply  sac_3.ply  single_1.ply  single_1_meter.ply  single_2.ply  single_2_meter.ply  single_3.ply  single_3_meter.ply
data/sliding_test/: scene_1_single.ply  scene_1_single_pcl.ply  scene_1_single_pcl_edges.ply  scene_1_single_pcl_mlstest.ply  scene_1_single_pre2108.ply  scene_1_test.ply  scene_2_single.ply  scene_2_single_pcl  scene_2_single_pcl_30.ply  scene_2_single_pcl_edges30.ply  scene_2_single_pcl_edges35.ply  scene_2_single_pre_5000.ply  scene_2_with_plane_pre_13000.ply  scene_3_multi.ply  scene_3_multi_pre_14000.ply  scene_single_ver.ply  scene_single_ver_pcl.ply  scene_single_ver_pcl_0.3.ply  scene_single_ver_pcl_0.5.ply  scene_single_ver_pre.ply  single_ver_test.ply  sliding.ply  sliding_sampled_5890.ply  sliding_sampled_5890_offset.ply  sliding_sampled_remeshed.ply  sliding_sampled_remeshed_4722.ply  sliding_sampled_remeshed_4722_edges.ply  test_1.ply  test_10.ply  test_11.ply  test_12.ply  test_13.ply  test_14.ply  test_2.ply  test_3.ply  test_4.ply  test_5.ply  test_6.ply  test_7.ply  test_8.ply  (+1 more)
data/water_bottle/: 1_cropped.ply  1_cropped_meter.ply  1_single_meter.ply
include/: Camera.h  CloudProcessing.h  Pixel.h  StaticImageProperties.h  YOLO_Detection_class.h  k4a_grabber.h  pcl_extra_PointTypes.hpp
src/: YOLO_cropping_ppf_test.cpp  YOLO_cropping_ppf_test_multi.cpp  mls_filter.cpp  mm_to_meter  mm_to_meter.cpp  multi_preprocessing.cpp  opencv_surfacematching  opencv_surfacematching.cpp  opencv_yolov4_detect  opencv_yolov4_detect.cpp  opencv_yolov4_detect_image  opencv_yolov4_detect_image.cpp  opencv_yolov4_detect_k4a  opencv_yolov4_detect_k4a.cpp  outlier_removal.cpp  ppf_pairwise_matching  ppf_pairwise_matching.cpp  sac_cylinder.cpp  sac_sphere.cpp  table_scene_mug_stereo_textured_cylinder.ply  table_scene_mug_stereo_textured_plane.pcd  test.ply
src/COMATRIX/: comatrix_capture_test.cpp
src/ObjectDetection-YOLO/: object_detection_yolo  object_detection_yolo.cpp
src/cloud_utils/: edge_estimation.cpp  image_crop_test.cpp  mls_filtering.cpp  model_normalize  model_normalize.cpp  normal_estimation_multi.cpp  outlier_removal.cpp  outlier_removal_multi.cpp  sor_sub_normal_estimation.cpp  unprojection.cpp  zero_removal.cpp
src/cloud_utils/unit_transfer/: milli_to_meter  milli_to_meter.cpp  multi_pcd2ply.cpp  multi_ply2pcd.cpp  normal_normalize.cpp
src/cloud_utils/visualization/: cloud_merging  cloud_merging.cpp  matchVisPCL.cpp
src/grasping_localization/: define_new_test  define_new_test.cpp  grasp_localization.cpp  write_contact_label.cpp
src/grasping_location/: contact_label.cpp
src/k4a_recording/: capture_cloud.cpp  k4a_cloud_test.cpp  k4a_image_test  k4a_image_test.cpp  k4a_record.cpp  k4a_record_saveone.cpp  k4a_record_v2.cpp  k4a_record_v2_auto.cpp  k4a_record_v3.cpp  k4a_record_v4.cpp  record.cpp
src/test/: crophull_example.cpp  crophull_test.cpp  hash_table_reloading.cpp
src/training/: detector_train  detector_train.cpp
